--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,6 +5,8 @@ test:
   adapter: async
 
 production:
-  adapter: redis
-  url: redis://localhost:6379/1
-  channel_prefix: nameofapp_production
+  adapter: postgresql
+  url: ENV['DATABASE_URL']
+  #adapter: redis
+  #url: redis://localhost:6379/1
+  channel_prefix: moebi_production
